--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build, Test, and Release
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   test:
-    runs-on: ubuntu-latest # Use a standard Linux environment for testing
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -26,3 +26,30 @@ jobs:
 
       - name: Run unit tests
         run: npm test
+
+  build:
+    needs: test # This job will only run if the 'test' job succeeds
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest] # Define the OSes to build
+    runs-on: ${{ matrix.os }} # Use the OS from the matrix
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build application
+        run: npm run build
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: calculator-${{ matrix.os }} # Name the artifact based on the OS
+          path: dist/ # The folder where the build output is stored
